@@ -1,4 +1,5 @@
 1.1.0 [not yet released]
+ - Fix handling of parameter "report" in Krylov solvers
  - Add new linear algebra backend "PETScCusp" for GPU-accelerated linear algebra
  - Add sparray method in the Python interface of GenericMatrix, requires scipy.sparse
  - Make methods that return a view of contigous c-arrays, via a NumPy array, keep
